# automap

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  langgraph.json  main.py  pyproject.toml
agents/: mapper_agent.py  refiner_agent.py  rml_architect_agent.py  schema_agent.py  yarrrml_agent.py  yarrrml_coordinator.py
config/: settings.py
data/: checkpoints.py
graph/: nodes.py  workflow.py
scripts/: patch_morph_kgc.sh
tools/: rml_tools.py
validation_hofer-et-al/: REPRODUCIBILITY.md
