[project]
name = "llm-agents-rml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-api>=0.7.60",
    "langgraph-cli>=0.2.6",
    "morph-kgc>=2.3.1",
    "pandas>=3.0.1",
    "rdflib>=7.6.0",
    "yatter>=2.0.3",
]
